add user activation
