# cmd/api/auth.go
@@ -3,6 +3,7 @@ package main
 import (
 	"crypto/sha256"
 	"encoding/hex"
+	"errors"
 	"github.com/google/uuid"
 	"github.com/timmy1496/social/internal/store"
 	"net/http"
@@ -12,6 +13,11 @@ type RegisterUserPayload struct {
 	Username string `json:"username" validate:"required,max=100"`
 	Email    string `json:"email" validate:"required,email,max=255"`
 	Password string `json:"password" validate:"required,min=3,max=72"`
+}
+
+type UserWithToken struct {
+	*store.User
+	Token string `json:"token"`
 }
 
 // registerUserHandler godoc
@@ -28,7 +34,7 @@ type RegisterUserPayload struct {
 //	@Router			/authentication/user [post]
 func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Request) {
 	var payload RegisterUserPayload
-	if err := readJSON(w, r, payload); err != nil {
+	if err := readJSON(w, r, &payload); err != nil {
 		app.badRequestResponse(w, r, err)
 		return
 	}
@@ -58,10 +64,10 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 	err := app.storage.Users.CreateAndInvite(ctx, user, hashToken, app.config.mail.exp)
 
 	if err != nil {
-		switch err {
-		case store.ErrDuplicateEmail:
+		switch {
+		case errors.Is(err, store.ErrDuplicateEmail):
 			app.badRequestResponse(w, r, err)
-		case store.ErrDuplicateUsername:
+		case errors.Is(err, store.ErrDuplicateUsername):
 			app.badRequestResponse(w, r, err)
 		default:
 			app.internalServerError(w, r, err)
@@ -70,7 +76,12 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 		return
 	}
 
-	if err := jsonResponse(w, http.StatusCreated, nil); err != nil {
+	UserWithToken := &UserWithToken{
+		User:  &user,
+		Token: plainToken,
+	}
+
+	if err := jsonResponse(w, http.StatusCreated, UserWithToken); err != nil {
 		app.internalServerError(w, r, err)
 	}
 }
